---------------------------------------------------------------------------
Version 6.3.9  [DEVEL] 2012-04-??
- bugfix: assigned ruleset was lost when using disk queues
  This looked quite hard to diagnose for disk-assisted queues, as the
  pure memory part worked well, but ruleset info was lost for messages
  stored inside the disk queue.
- bugfix/imuxsock: solving abort if hostname was not set; configured
  hostname was not used (both merge regressions)
---------------------------------------------------------------------------
Version 6.3.8  [DEVEL] 2012-04-16
- added $PStatJSON directive to permit stats records in JSON format
- added "date-unixtimestamp" property replacer option to format as a
  unix timestamp (seconds since epoch)
- added "json" property replacer option to support JSON encoding on a
  per-property basis
- added omhiredis (contributed module)
- added mmjsonparse to support recognizing and parsing JSON enhanced syslog
  messages
- upgraded more plugins to support the new v6 config format:
  - ommysql
  - omlibdbi
  - omsnmp
- added configuration directives to customize queue light delay marks
  $MainMsgQueueLightDelayMark, $ActionQueueLightDelayMark; both
  specify number of messages starting at which a delay happens.
- added message property parsesuccess to indicate if the last run
  higher-level parser could successfully parse the message or not
  (see property replacer html doc for details)
- bugfix: abort during startup when rsyslog.conf v6+ format was used in
  a certain way
- bugfix: property $!all-json made rsyslog abort if no normalized data
  was available
- bugfix: memory leak in array passing output module mode
- added configuration directives to customize queue light delay marks
- permit size modifiers (k,m,g,...) in integer config parameters
  Thanks to Jo Rhett for the suggestion.
- bugfix: hostname was not requeried on HUP
  Thanks to Per Jessen for reporting this bug and Marius Tomaschewski for
  his help in testing the fix.